<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/carr"
        android:text="@string/bank_accounts"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/carr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        app:cardUseCompatPadding="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upConstraint"

            >

        <View
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="#fd0235"
            android:id="@+id/view"
            tools:ignore="MissingConstraints" />
       <LinearLayout
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginLeft="8dp"
           tools:ignore="MissingConstraints">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/new_super_chamatkarik_sahaj"
               android:textColor="@color/white"
               android:textSize="18sp"
               android:textStyle="normal"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/bachat_khata"
               android:textColor="@color/white"
               android:textSize="18sp"
               android:textStyle="normal"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sijan_bhattarai"
               android:textColor="@color/white"
               android:textSize="18sp"
               android:textStyle="normal"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_01123452343532345"
               android:textColor="@color/white"
               android:textSize="18sp"
               android:textStyle="normal"
               />

       </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



      <LinearLayout
          android:layout_marginLeft="8dp"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:layout_marginTop="135dp"
          >
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="8dp"
              >

              <TextView
                  android:layout_width="155dp"
                  android:layout_height="wrap_content"
                  android:text="@string/available_balance"
                  android:textStyle="normal"
                  android:textSize="17sp"
                  android:textColor="@color/black"
                  android:fontFamily="sans-serif-medium"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/npr_2421443243"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:fontFamily="sans-serif-medium"
                  android:textSize="18sp"
                  android:layout_marginStart="70dp"
                  />
          </LinearLayout>
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="8dp"
              >

              <TextView
                  android:layout_width="155dp"
                  android:layout_height="wrap_content"
                  android:text="Actual Balance"
                  android:textStyle="normal"
                  android:textSize="17sp"
                  android:textColor="@color/black"
                  android:fontFamily="sans-serif-medium"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/npr_235535233"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:fontFamily="sans-serif-medium"
                  android:textSize="18sp"
                  android:layout_marginStart="70dp"
                  />
          </LinearLayout>
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="8dp"
              >

              <TextView
                  android:layout_width="155dp"
                  android:layout_height="wrap_content"
                  android:text="@string/accured_interest"
                  android:textStyle="normal"
                  android:textSize="17sp"
                  android:textColor="@color/black"
                  android:fontFamily="sans-serif-medium"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text= "@string/npr_123435"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:fontFamily="sans-serif-medium"
                  android:textSize="18sp"
                  android:layout_marginStart="70dp"
                  />
          </LinearLayout>
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="8dp"
              >

              <TextView
                  android:layout_width="155dp"
                  android:layout_height="wrap_content"
                  android:text="@string/interest_rate"
                  android:textStyle="normal"
                  android:textSize="17sp"
                  android:textColor="@color/black"
                  android:fontFamily="sans-serif-medium"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="6.05%"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:fontFamily="sans-serif-medium"
                  android:textSize="18sp"
                  android:layout_marginStart="70dp"
                  />
          </LinearLayout>

      </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_marginTop="310dp"
            android:weightSum="3"
            android:background="#f2f3f4"
            android:gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/sendmoney"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_money"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/phonpayment"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payments"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/customercare"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_care"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>