<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f3"
    tools:context=".fixdepo">

    <View
        android:id="@+id/vv"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#df0250"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fixed_deposit_request"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        android:gravity="center"
       app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/vv"
        android:layout_marginTop="-90dp"
        android:elevation="10dp"
        app:cardMaxElevation="12dp"
        android:background="@color/white"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/account_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="bottom"
                />
           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:hint="Name"
               android:background="@drawable/grey"
               android:paddingStart="8dp"
               />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="bottom"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Amount"
                android:background="@drawable/grey"
                android:paddingStart="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/tenure"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="bottom"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <!-- Inside text input layout add
                    an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteMonths"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none"
                    android:background="@drawable/grey"
                    android:text="@string/months" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="bottom"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Email address"
                android:background="@drawable/grey"
                android:paddingStart="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/from_account"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="bottom"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <!-- Inside text input layout add
                    an auto complete text view
                        and make its input type to none-->
                <AutoCompleteTextView
                   android:id="@+id/autocompleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="none"
                    android:background="@drawable/grey"
                    android:text="@string/account_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/submit"
                android:textSize="19sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvcancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Cancel"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:gravity="center"
                />




        </LinearLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>