<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"

        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#fd0235"
            android:text="@string/contact_details"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/toll_free_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ph_9852342524"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:textStyle="normal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>