<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sendMoney">

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#df0235"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_money"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"


            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_money_instantly_to_accounts_in_our_bank_or_any_other_bank"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:layout_marginTop="10dp"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="15dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:src="@drawable/fonepay"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/using_recipient_s_mobile_number"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="17sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="-15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    >
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/fund_transfer"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="24sp"
                       android:layout_marginTop="10dp"
                       android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/using_recipient_s_account_number"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="17sp"
                        android:textStyle="normal"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardCornerRadius="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="-15dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/connectops"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/using_recipient_connect_ips"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="17sp"
                        android:textStyle="normal"
                        android:layout_marginBottom="10dp"

                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interbank_fund_transfers_may_incur_service_charges"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:textStyle="normal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>